manifests/nodejs/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: simple-node-api
  namespace: "default"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3000
  selector:
    app: "simple-node-api"
  type: "ClusterIP"
